// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> and toggles the card feature 1`] = `
<div
  class="card__Group-sc-1tn30zk-2 eocFIB"
>
   
  <div
    class="card__Container-sc-1tn30zk-1 kJHQgW"
  >
    <p
      class="card__Title-sc-1tn30zk-0 iPHpya"
    >
       
      Documentaries
       
    </p>
    <div
      class="card__Entities-sc-1tn30zk-12 esGYKf"
    >
       
      <div
        class="card__Item-sc-1tn30zk-13 hIKygd"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-1tn30zk-14 eifAIP"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-11 kmCKUn"
        >
           
          <p
            class="card__SubTitle-sc-1tn30zk-3 gSUxfi"
          >
             
            Tiger King
             
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 fwLGcr"
          >
             
            Tiger King description
             
          </p>
           
        </div>
      </div>
       
    </div>
  </div>
  <div
    class="card__Container-sc-1tn30zk-1 kJHQgW"
  >
    <p
      class="card__Title-sc-1tn30zk-0 iPHpya"
    >
       
      Feel Good
       
    </p>
    <div
      class="card__Entities-sc-1tn30zk-12 esGYKf"
    >
       
      <div
        class="card__Item-sc-1tn30zk-13 hIKygd"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-1tn30zk-14 eifAIP"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-11 kmCKUn"
        >
           
          <p
            class="card__SubTitle-sc-1tn30zk-3 gSUxfi"
          >
             
            Juno
             
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 fwLGcr"
          >
             
            Juno description
             
          </p>
           
        </div>
      </div>
       
    </div>
  </div>
   
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-sc-1tn30zk-2 eocFIB"
>
   
  <div
    class="card__Container-sc-1tn30zk-1 kJHQgW"
  >
    <p
      class="card__Title-sc-1tn30zk-0 iPHpya"
    >
       
      Documentaries
       
    </p>
    <div
      class="card__Entities-sc-1tn30zk-12 esGYKf"
    >
       
      <div
        class="card__Item-sc-1tn30zk-13 hIKygd"
      >
        <img
          class="card__Image-sc-1tn30zk-14 eifAIP"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-11 kmCKUn"
        >
           
          <p
            class="card__SubTitle-sc-1tn30zk-3 gSUxfi"
          >
             
            Tiger King
             
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 fwLGcr"
          >
             
            Tiger King description
             
          </p>
           
        </div>
      </div>
       
    </div>
  </div>
  <div
    class="card__Container-sc-1tn30zk-1 kJHQgW"
  >
    <p
      class="card__Title-sc-1tn30zk-0 iPHpya"
    >
       
      Feel Good
       
    </p>
    <div
      class="card__Entities-sc-1tn30zk-12 esGYKf"
    >
       
      <div
        class="card__Item-sc-1tn30zk-13 hIKygd"
      >
        <img
          class="card__Image-sc-1tn30zk-14 eifAIP"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-11 kmCKUn"
        >
           
          <p
            class="card__SubTitle-sc-1tn30zk-3 gSUxfi"
          >
             
            Juno
             
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 fwLGcr"
          >
             
            Juno description
             
          </p>
           
        </div>
      </div>
       
    </div>
  </div>
   
</div>
`;
